ingress/scpman-ingress/scpman.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: scpman
   labels:
     name: scpman
