ingress/scpman-ingress/demosite-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpweb
  namespace: scpman
  labels:
    name: phpweb
spec:
  ports:
  - port: 80
  selector:
    name: phpweb
