ingress/scpman-ingress/traefik-web-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: scpman
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: web
    port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: scpman
spec:
  rules:
  - host: monitor.scpman.com
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-web-ui
          servicePort: web
  - host: php.scpman.com
    http:
      paths:
      - path: /
        backend:
          serviceName: phpweb 
          servicePort: 80
